--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 .vagrant/machines/default/virtualbox/action_provision
 .vagrant/machines/default/virtualbox/action_set_name
 .vagrant/machines/default/virtualbox/id
+games
